--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,51 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+  background: rgb(154, 104, 207);
+  background: linear-gradient(
+    90deg,
+    rgba(154, 104, 207, 1) 0%,
+    rgba(181, 68, 180, 1) 50%,
+    rgba(137, 137, 255, 1) 100%
+  );
+  height: 100vh;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+figure {
+  width: 50rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+img {
+  object-fit: contain;
+  width: 50%;
+}
+
+.opening-modal {
+  padding: 10px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  border-radius: 5px;
+  background-color: unset;
+  transition: all 0.9s;
+
+  &:hover {
+    /* transform: rotate(1turn); */
+    font-weight: bold;
+    background-color: #ccc;
+  }
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,6 +54,11 @@
   }
 }
 
+@media only screen and (max-width: 800px) {
+  figure {
+    width: unset;
+  }
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
